--- a/resources/CA-FE-DEV-Test.css
+++ b/resources/CA-FE-DEV-Test.css
@@ -45,6 +45,8 @@ h2 {
 .cards-main-container {
   display: flex;
   column-gap: 10px;
+  max-width: 950px;
+  margin: 0 auto;
 }
 
 .card-container {
@@ -86,6 +88,7 @@ h2 {
 @media (max-width: 600px) {
   .cards-main-container {
     flex-direction: column;
+    max-width: 300px;
   }
 
   .slide {
