adds prev/next buttons to carousel

--- a/resources/CA-FE-DEV-Test.css
+++ b/resources/CA-FE-DEV-Test.css
@@ -42,6 +42,35 @@ h2 {
   background-color: #ffffffcc;
 }
 
+.previous,
+.next {
+  border: none;
+  background-color: #ffffff00;
+  color: #ffffff71;
+  width: 30px;
+  height: 30px;
+  font-size: 20px;
+  border-radius: 50%;
+  font-weight: 900;
+}
+
+.previous {
+  position: absolute;
+  top: calc(50% - 15px);
+  left: 10px;
+}
+
+.next {
+  position: absolute;
+  top: calc(50% - 15px);
+  right: 10px;
+}
+
+.previous:hover,
+.next:hover {
+  color: #ffffffcc;
+}
+
 .cards-main-container {
   display: flex;
   column-gap: 10px;
